--- a/.github/workflows/code-qualitiy.yml
+++ b/.github/workflows/code-qualitiy.yml
@@ -15,6 +15,10 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
+      - name: Set up Maven
+        uses: stCarolas/setup-maven@v4.5
+        with:
+          maven-version: 3.9.0
       - name: mvn clean verify
         run: mvn clean verify
       - name: Build with Maven
@@ -23,6 +27,8 @@ jobs:
         run: mvn org.apache.maven.plugins:maven-javadoc-plugin:3.5.0:jar
       - name: Run spotless check
         run: mvn spotless:check
+      - name: Check maven pom quality
+        run: mvn org.kordamp.maven:pomchecker-maven-plugin:1.9.0:check-maven-central -D"checker.release=false"
   qodana:
     runs-on: ubuntu-latest
     steps:
