--- a/.github/workflows/jreleaser.yml
+++ b/.github/workflows/jreleaser.yml
@@ -39,7 +39,10 @@ jobs:
         run: echo "CURRENT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout | sed 's/-SNAPSHOT//')" >> $GITHUB_ENV
       - name: Get version with snapshot
         run: echo "CURRENT_VERSION_WITH_SNAPSHOT=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
-
+      - name: run maven-lockfile
+        uses: chains-project/maven-lockfile@v1.1.7
+        with:
+            github-token: ${{ secrets.GITHUB_TOKEN }}
 # Calculate next version: 
 # - if version is patch, we just increment the patch version
 # - if version is minor or major, we increment the minor or major version and set the patch version to 0
@@ -51,6 +54,10 @@ jobs:
         # semver next for a snapshot only releases the snapshot version, so we need to run it 2 times
         if: ${{ github.event.inputs.version == 'major'  || github.event.inputs.version == 'minor' }}
         run: echo "NEXT_VERSION=$(semver next ${{ github.event.inputs.version }} $CURRENT_VERSION)" >> $GITHUB_ENV
+      - name: run maven-lockfile
+        uses: chains-project/maven-lockfile@v1.1.7
+        with:
+            github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Set release version
         run: mvn --no-transfer-progress --batch-mode versions:set -DnewVersion=$NEXT_VERSION -DprocessAllModules
       - name: Commit & Push changes
