--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,9 @@
               <trimTrailingWhitespace></trimTrailingWhitespace>
               <endWithNewline></endWithNewline>
               <indent>
-                <tabs>true</tabs>
+                <tabs>false</tabs>
+                <spaces>true</spaces>
+                <spacesPerTab>4</spacesPerTab>
               </indent>
             </format>
           </formats>
