--- a/.github/workflows/jreleaser.yml
+++ b/.github/workflows/jreleaser.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
           cache: maven
           
@@ -39,10 +39,6 @@ jobs:
         run: echo "CURRENT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout | sed 's/-SNAPSHOT//')" >> $GITHUB_ENV
       - name: Get version with snapshot
         run: echo "CURRENT_VERSION_WITH_SNAPSHOT=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
-      - name: run maven-lockfile
-        uses: chains-project/maven-lockfile@v1.1.7
-        with:
-            github-token: ${{ secrets.GITHUB_TOKEN }}
 # Calculate next version: 
 # - if version is patch, we just increment the patch version
 # - if version is minor or major, we increment the minor or major version and set the patch version to 0
@@ -60,6 +56,8 @@ jobs:
             github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Set release version
         run: mvn --no-transfer-progress --batch-mode versions:set -DnewVersion=$NEXT_VERSION -DprocessAllModules
+      - name: Generate Readme
+        run : mvn resources:copy-resources
       - name: Commit & Push changes
         uses: actions-js/push@master
         with:
@@ -103,19 +101,17 @@ jobs:
         run: mvn --no-transfer-progress --batch-mode versions:set -DnewVersion=$NEXT_RELEASE_VERSION -DprocessAllModules
 
 # Time to update some files with the new version
-      - name: SED io.github.chains-project:maven-lockfile:${{ env.CURRENT_VERSION }} in java files with io.github.chains-project:maven-lockfile:${{ env.NEXT_VERSION_WITHOUT_SNAPSHOT }}
-        run: |
-          find . -name "*.java" | xargs sed -i "s/io.github.chains-project:maven-lockfile:${{ env.CURRENT_VERSION }}/io.github.chains-project:maven-lockfile:${{ env.NEXT_RELEASE_VERSION_WITHOUT_SNAPSHOT }}/g"
-      - name: Set in action.yml io.github.chains-project:maven-lockfile-github-action:${{ env.CURRENT_VERSION }} with io.github.chains-project:maven-lockfile-github-action:${{ env.NEXT_RELEASE_VERSION_WITHOUT_SNAPSHOT }} without snapshot
-        run: |
-          find . -name "action.yml" | xargs sed -i "s/io.github.chains-project:maven-lockfile-github-action:${{ env.CURRENT_VERSION }}/io.github.chains-project:maven-lockfile-github-action:${{ env.NEXT_RELEASE_VERSION_WITHOUT_SNAPSHOT }}/g"
-
+#1 Readme and action.yml
+      - name: Generate Readme
+        run : mvn resources:copy-resources
+# Commit and push changes
       - name: Commit & Push changes
         uses: actions-js/push@master
         with:
           github_token: ${{ secrets.JRELEASER_GITHUB_TOKEN }}
           message: 🔖 Setting SNAPSHOT version ${{ env.NEXT_VERSION }}
 
+# Log failure:
       - name: JReleaser release output
         if: always()
         uses: actions/upload-artifact@v3
