--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,25 @@
           </pom>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>3.0.1</version>
+        <configuration>
+          <outputDirectory>${project.basedir}</outputDirectory>
+          <resources>
+            <resource>
+              <directory>/template/</directory>
+              <includes>
+                <include>README.md</include>
+                <include>action.yml</include>
+              </includes>
+              <filtering>true</filtering>
+            </resource>
+          </resources>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
