--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -18,7 +18,7 @@ jobs:
           with:
             maven-version: 3.9.0
         - name: Generate Readme+action.yml
-          run: mvn resources:copy-resources
+          run: mvn resources:copy-resources -q
         - id: commit-lockfile
           uses: EndBug/add-and-commit@v9
           with:
