--- a/pom.xml
+++ b/pom.xml
@@ -26,14 +26,21 @@
     <module>maven_plugin</module>
     <module>github_action</module>
   </modules>
-
   <scm>
     <connection>scm:git:https://github.com/chains-project/maven-lockfile</connection>
     <developerConnection>scm:git:https://github.com/chains-project/maven-lockfile.git</developerConnection>
     <url>https://github.com/chains-project/maven-lockfile.git</url>
   </scm>
+  <properties>
+    <project.build.outputTimestamp>2023-01-01T00:00:00Z</project.build.outputTimestamp>
+  </properties>
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-artifact-plugin</artifactId>
+        <version>3.4.1</version>
+      </plugin>
       <plugin>
         <groupId>com.diffplug.spotless</groupId>
         <artifactId>spotless-maven-plugin</artifactId>
