--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
         <version>3.0.1</version>
+        <inherited>false</inherited>
         <configuration>
           <outputDirectory>${project.basedir}</outputDirectory>
           <resources>
