--- a/.github/workflows/Lockfile.yml
+++ b/.github/workflows/Lockfile.yml
@@ -1,3 +1,4 @@
+# SNIPPET START lockfilegithubaction
 name: Lockfile
 on:
   pull_request:
@@ -11,3 +12,4 @@ jobs:
           uses: chains-project/maven-lockfile@20c49498ce30d0d6505ef97e8055c7cba90caa9f # v1.1.7
           with:
             github-token: ${{ secrets.GITHUB_TOKEN }}
+# SNIPPET END lockfilegithubaction
