--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
         <version>3.3.1</version>
+        <inherited>false</inherited>
         <configuration>
           <outputDirectory>${project.basedir}</outputDirectory>
           <resources>
@@ -89,7 +90,17 @@
             </resource>
           </resources>
           <encoding>UTF-8</encoding>
+          <mavenFilteringHints>
+            <mavenFilteringHint>snippetFilter</mavenFilteringHint>
+          </mavenFilteringHints>
         </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>io.metaloom.maven</groupId>
+            <artifactId>snippet-resource-filter</artifactId>
+            <version>0.1.2</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
