--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,14 @@ inputs:
     description: 'Commit the lockfile to the repository'
     required: false
     default: 'true'
+  commit-message:
+    description: 'Commit message for the lockfile'
+    required: false
+    default: 'chore: update lockfile'
+  commit-author:
+    description: 'Author for the lockfile commit. GitHub provides default values for this field. "github_actions" for "Github Actions", "github_bot" for "Github Bot" or "github_actor" for the original user.'
+    required: false
+    default: 'github_actions'
 runs:
   using: "composite"
   steps:
@@ -55,4 +63,5 @@ runs:
       if: inputs.commit-lockfile == 'true'
       uses: EndBug/add-and-commit@61a88be553afe4206585b31aa72387c64295d08b # v9
       with:
-          default_author: github_actions
+          default_author: ${{ inputs.commit-author }}
+          message: ${{ inputs.commit-message }}
