--- a/.github/workflows/jreleaser.yml
+++ b/.github/workflows/jreleaser.yml
@@ -66,7 +66,7 @@ jobs:
 
 # Now we can run the release
       - name: Stage release
-        run: mvn --no-transfer-progress --batch-mode -Ppublication clean deploy -DaltDeploymentRepository=local::default::file://`pwd`/target/staging-deploy
+        run:  mvn --no-transfer-progress --batch-mode -Ppublication clean package  deploy -D"quarkus.package.type=uber-jar" -D"skipOriginalJarRename=true" -D"quarkus.package.add-runner-suffix=false"  -DaltDeploymentRepository=local::default::file://`pwd`/target/staging-deploy
       - name: Print next version
         run: mvn help:evaluate -Dexpression=project.version -q -DforceStdout | sed 's/-SNAPSHOT//'
       - name: Run JReleaser
