--- a/github_action/pom.xml
+++ b/github_action/pom.xml
@@ -28,7 +28,10 @@
     <quarkus.platform.version>2.16.6.Final</quarkus.platform.version>
     <skipITs>true</skipITs>
     <surefire-plugin.version>3.0.0-M8</surefire-plugin.version>
-  </properties>
+    <quarkus.package.type>uber-jar</quarkus.package.type>
+    <skipOriginalJarRename>true</skipOriginalJarRename>
+    <quarkus.package.add-runner-suffix>false</quarkus.package.add-runner-suffix> 
+    </properties>
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -164,39 +167,6 @@
       </activation>
       <build>
         <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>flatten-maven-plugin</artifactId>
-            <version>1.4.1</version>
-            <configuration>
-              <pomElements>
-                <description>keep</description>
-                <url>keep</url>
-                <developers>keep</developers>
-                <scm>keep</scm>
-                <issueManagement>keep</issueManagement>
-                <repositories>remove</repositories>
-                <dependencies>remove</dependencies>
-                <build>remove</build>
-              </pomElements>
-            </configuration>
-            <executions>
-              <execution>
-                <id>flatten</id>
-                <goals>
-                  <goal>flatten</goal>
-                </goals>
-                <phase>process-resources</phase>
-              </execution>
-              <execution>
-                <id>flatten.clean</id>
-                <goals>
-                  <goal>clean</goal>
-                </goals>
-                <phase>clean</phase>
-              </execution>
-            </executions>
-          </plugin>
         </plugins>
       </build>
     </profile>
