--- a/github_action/pom.xml
+++ b/github_action/pom.xml
@@ -30,8 +30,8 @@
     <surefire-plugin.version>3.0.0-M8</surefire-plugin.version>
     <quarkus.package.type>uber-jar</quarkus.package.type>
     <skipOriginalJarRename>true</skipOriginalJarRename>
-    <quarkus.package.add-runner-suffix>false</quarkus.package.add-runner-suffix> 
-    </properties>
+    <quarkus.package.add-runner-suffix>false</quarkus.package.add-runner-suffix>
+  </properties>
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -166,8 +166,7 @@
         </property>
       </activation>
       <build>
-        <plugins>
-        </plugins>
+        <plugins></plugins>
       </build>
     </profile>
     <profile>
