--- a/template/action.yml
+++ b/template/action.yml
@@ -60,7 +60,7 @@ runs:
       shell: bash
 
     - id: action
-      run: ~/.jbang/bin/jbang --repos 'github=https://maven.pkg.github.com/chains-project/maven-lockfile/' --repos 'mavencentral' io.github.chains-project:maven-lockfile-github-action:${project.version}
+      run: ~/.jbang/bin/jbang --repos 'mavencentral' io.github.chains-project:maven-lockfile-github-action:${project.version}
       shell: bash
       env:
         JSON_INPUTS: ${{ toJSON(inputs) }}
