👷 Update qodana config to new style

--- a/qodana.yml
+++ b/qodana.yml
@@ -3,66 +3,37 @@ profile:
 version: "1.0"
 linter: jetbrains/qodana-jvm:2023.1-eap
 failThreshold: 0
-include:
-  - name: Anonymous2MethodRef
-  - name: AnonymousHasLambdaAlternative
-  - name: ArrayEquality
-  - name: AssignmentToCatchBlockParameter
-  - name: AssignmentToLambdaParameter
-  - name: AssignmentToMethodParameter
-  - name: BoundedWildcard
-  - name: CallToStringConcatCanBeReplacedByOperator
-  - name: CodeBlock2Expr
-  - name: ConstantMathCall
-  - name: Convert2Lambda
-  - name: Convert2MethodRef
-  - name: DoubleBraceInitialization
-  - name: DynamicRegexReplaceableByCompiledPattern
-  - name: EmptyMethod
-  - name: EqualsAndHashcode
-  - name: GroovyUnnecessaryContinue
-  - name: GroovyUnnecessaryReturn
-  - name: GroovyUnusedAssignment
-  - name: Java8ListReplaceAll
-  - name: Java8MapApi
-  - name: JavaLangImport
-  - name: JoinDeclarationAndAssignmentJava
-  - name: KeySetIterationMayUseEntrySet
-  - name: MissortedModifiers
-  - name: NestedAssignment
-  - name: NonFinalFieldOfException
-  - name: NonProtectedConstructorInAbstractClass
-  - name: NonSerializableFieldInSerializableClass
-  - name: NonShortCircuitBoolean
-  - name: NonStrictComparisonCanBeEquality
-  - name: OptionalContainsCollection
-  - name: ProtectedMemberInFinalClass
-  - name: RandomDoubleForRandomInteger
-  - name: RedundantFieldInitialization
-  - name: RedundantImplements
-  - name: RedundantMethodOverride
-  - name: RedundantSuppression
-  - name: Reformat
-  - name: ReturnNull
-  - name: SamePackageImport
-  - name: SimplifyBooleanWithConstants
-  - name: SizeReplaceableByIsEmpty
-  - name: StaticPseudoFunctionalStyleMethod
-  - name: StringEquality
-  - name: ToArrayCallWithZeroLengthArrayArgument
-  - name: UnnecessaryBoxing
-  - name: UnnecessaryCallToStringValueOf
-  - name: UnnecessaryFullyQualifiedName
-  - name: UnnecessaryLocalVariable
-  - name: UnnecessaryModifier
-  - name: UnnecessarySuperQualifier
-  - name: UnnecessaryToStringCall
-  - name: UnnecessaryUnboxing
-  - name: UNUSED_IMPORT
-  - name: ZeroLengthArrayInitialization
-  - name: WhileCanBeForeach
-  - name: JavaAnnotator
-  - name: StaticCallOnSubclass
-exclude:
-  - name: UseOfClone
-  - name: UnstableApiUsage
+groups:
+  - groupId: IncludedPaths
+    groups:
+          - "category:Java"
+          - "GLOBAL"
+  - groupId: ExcludedInspections # list of inspections disabled by specific reason
+    inspections:
+      - "!IncludedPaths"
+      - Annotator # substituted by JavaAnnotator in sanity
+      - JavaAnnotator # works in "sanity" inspections
+      - SyntaxError # should work on sanity level
+      - Since15 #Detects wrong language level. Should work on sanity.
+      - JavadocBlankLines # Questionable. Spam on mockito, RxJava and other projects.
+      - UseOfClone
+      - UnstableApiUsage
+inspections:
+  - group: Excluded
+    enabled: false
+  - group: IncludedPaths
+    ignore:
+      - "vendor/**"
+      - "build/**"
+      - "buildSrc/**"
+      - "builds/**"
+      - "dist/**"
+      - "tests/**"
+      - "tools/**"
+      - "vendor/**"
+      - "**.test.ts"
+      - "scope#$gitignore" # $gitignore scope available only in qodana execution
+      - "scope#test:*..*"
+      - "scope#file:buildSrc/*"
+  - inspection: JavadocReference
+    severity: WARNING # It has default ERROR severity. It's understandable for unresolved references in javadocs for editor but not on CI.
