--- a/qodana.yml
+++ b/qodana.yml
@@ -18,7 +18,7 @@ groups:
       - UseOfClone
       - UnstableApiUsage
 inspections:
-  - group: Excluded
+  - group: ExcludedInspections
     enabled: false
   - group: IncludedPaths
     ignore:
