--- a/renovate.json
+++ b/renovate.json
@@ -20,6 +20,7 @@
         "fix"
       ],
       "automerge": true,
+      "automergeStrategy" : "squash",
       "semanticCommitType": ":arrow_up:"
     },
     {
