--- a/renovate.json
+++ b/renovate.json
@@ -25,7 +25,8 @@
     {
       "updateTypes": [
         "lockFileMaintenance",
-        "pin"
+        "pin",
+        "pinDigest"
       ],
       "semanticCommitType": ":pushpin:"
     },
