--- a/renovate.json
+++ b/renovate.json
@@ -16,7 +16,8 @@
         "patch",
         "pin",
         "digest",
-        "fix"
+        "fix",
+        "action"
       ],
       "automerge": true,
       "automergeStrategy" : "squash",
