--- a/renovate.json
+++ b/renovate.json
@@ -6,7 +6,6 @@
   "semanticCommitType": ":arrow_up:",
   "semanticCommits": true,
   "gitIgnoredAuthors" : [
-    // this id seems to be the same for all github actions.s
     "41898282+github-actions[bot]@users.noreply.github.com",
     "github-actions[bot]@users.noreply.github.com"
   ],
@@ -17,16 +16,19 @@
         "patch",
         "pin",
         "digest",
-        "fix"
+        "fix",
+        "action"
       ],
       "automerge": true,
+      "automergeType": "pr",
       "automergeStrategy" : "squash",
       "semanticCommitType": ":arrow_up:"
     },
     {
       "updateTypes": [
         "lockFileMaintenance",
-        "pin"
+        "pin",
+        "pinDigest"
       ],
       "semanticCommitType": ":pushpin:"
     },
