✨ Add freeze mojo (#239)
Co-authored-by: MartinWitt <MartinWitt@users.noreply.github.com>

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -1,14 +1,15 @@
-name: My Workflow
+name: Doc Generation
 on:
-  push:
-    branches:
-      - main
+  pull_request:
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v3
+        with:
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.pull_request.head.ref }}
       - name: Set up Maven
         uses: stCarolas/setup-maven@1d56b37995622db66cce1214d81014b09807fb5a # v4
         with:
