--- a/.github/workflows/qodana-cloud.yml
+++ b/.github/workflows/qodana-cloud.yml
@@ -3,7 +3,9 @@ on:
   push:
     branches:
       - main
-
+permissions:
+  contents: read
+  security-events: write
 jobs:
   qodana:
     runs-on: ubuntu-latest
