--- a/.github/workflows/Lockfile.yml
+++ b/.github/workflows/Lockfile.yml
@@ -3,9 +3,11 @@ on:
   pull_request:
 
 permissions:
-  contents: write
+  contents: read
 jobs:
   check-lockfile:
+        permissions:
+          contents: write
         runs-on: ubuntu-latest
         steps:
         - name: run maven-lockfile
