--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -3,10 +3,12 @@ on:
   pull_request:
 
 permissions:
-  contents: write
+  contents: read
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v3
