--- a/.github/workflows/jreleaser.yml
+++ b/.github/workflows/jreleaser.yml
@@ -55,6 +55,8 @@ jobs:
         with:
             github-token: ${{ secrets.GITHUB_TOKEN }}
             include-maven-plugins: true
+      - name: set branchname to next version
+        run: echo "BRANCH_NAME=release/$NEXT_VERSION" >> $GITHUB_ENV
       - name: Set release version
         run: mvn --no-transfer-progress --batch-mode versions:set -DnewVersion=$NEXT_VERSION -DprocessAllModules
       - name: Generate Readme
@@ -64,6 +66,7 @@ jobs:
         with:
           github_token: ${{ secrets.JRELEASER_GITHUB_TOKEN }}
           message: 🔖 Releasing version ${{ env.NEXT_VERSION }}
+          branch: ${{ env.BRANCH_NAME }}
 
 # Now we can run the release
       - name: Stage release
@@ -113,7 +116,12 @@ jobs:
         with:
           github_token: ${{ secrets.JRELEASER_GITHUB_TOKEN }}
           message: 🔖 Setting SNAPSHOT version ${{ env.NEXT_VERSION }}
-
+          branch: ${{ env.BRANCH_NAME }}
+      - name: Merge Fast Forward
+        run: |
+          git checkout main
+          git merge --ff-only ${{ env.BRANCH_NAME }}
+          git push
 # Log failure:
       - name: JReleaser release output
         if: always()
