✨ Add JRELEASER_GITHUB_TOKEN to actions/checkout, and change deployment directory
Add JRELEASER_GITHUB_TOKEN environmental variable to actions/checkout to fetch repository. Change deployment directory to target/staging-deploy. Configuration for cyclonedx-maven-plugin is also updated to include test scope and set the output directory to staging-deploy.

--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -12,8 +12,8 @@ project:
     homepage: https://github.com/chains-project/maven-lockfile
   java:
     groupId: io.github.chains-project
-    version: 11
-  inceptionYear: 2023
+    version: "11"
+  inceptionYear: "2023"
 
 release:
   github:
@@ -31,8 +31,8 @@ release:
 files:
   active: ALWAYS
   artifacts:
-    - path: target/bom.xml
-    - path: target/bom.json
+    - path: target/staging-deploy/bom.xml
+    - path: target/staging-deploy/bom.json
   globs:
     - pattern: target/*.buildinfo
 signing:
