--- a/.github/workflows/jreleaser.yml
+++ b/.github/workflows/jreleaser.yml
@@ -23,13 +23,17 @@ jobs:
         uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3
         with:
           fetch-depth: 0
+          token: ${{ secrets.JRELEASER_GITHUB_TOKEN }}
       - name: Set up JDK 11
         uses: actions/setup-java@5ffc13f4174014e2d4d4572b3d74c3fa61aeb2c2 # v3
         with:
           java-version: '11'
           distribution: 'temurin'
           cache: maven
-          
+      - name: Set git user
+        run: |
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "<>"
       - name: install go
         uses: actions/setup-go@fac708d6674e30b6ba41289acaab6d4b75aa0753 # v4
       - name: install semversion
@@ -61,16 +65,13 @@ jobs:
         run: mvn --no-transfer-progress --batch-mode versions:set -DnewVersion=$NEXT_VERSION -DprocessAllModules
       - name: Generate Readme
         run : mvn generate-resources resources:copy-resources
-      - name: Commit & Push changes
-        uses: actions-js/push@156f2b10c3aa000c44dbe75ea7018f32ae999772 # v 1.4.0
-        with:
-          github_token: ${{ secrets.JRELEASER_GITHUB_TOKEN }}
-          message: 🔖 Releasing version ${{ env.NEXT_VERSION }}
-          branch: ${{ env.BRANCH_NAME }}
-
+      - name: commit changes
+        run: |
+          git checkout -b ${{ env.BRANCH_NAME }}
+          git commit -am "🔖 Releasing version ${{ env.NEXT_VERSION }}"
 # Now we can run the release
       - name: Stage release
-        run:  mvn --no-transfer-progress --batch-mode -Ppublication clean deploy -DaltDeploymentRepository=local::default::file://`pwd`/target/staging-deploy
+        run:  mvn --no-transfer-progress --batch-mode -Ppublication clean deploy -DaltDeploymentRepository=local::file:./target/staging-deploy
       - name: generate buildinfo file
         run: mvn org.apache.maven.plugins:maven-artifact-plugin:3.4.1:buildinfo
       - name: Print next version
@@ -105,23 +106,20 @@ jobs:
          echo "NEXT_RELEASE_VERSION_WITHOUT_SNAPSHOT=$(semver next patch $NEXT_VERSION)" >> $GITHUB_ENV
       - name: Set release version
         run: mvn --no-transfer-progress --batch-mode versions:set -DnewVersion=$NEXT_RELEASE_VERSION -DprocessAllModules
-
 # Time to update some files with the new version
 #1 Readme and action.yml
       - name: Generate Readme
         run : mvn generate-resources resources:copy-resources -q
 # Commit and push changes
       - name: Commit & Push changes
-        uses: actions-js/push@156f2b10c3aa000c44dbe75ea7018f32ae999772 # v 1.4.0
-        with:
-          github_token: ${{ secrets.JRELEASER_GITHUB_TOKEN }}
-          message: 🔖 Setting SNAPSHOT version ${{ env.NEXT_VERSION }}
-          branch: ${{ env.BRANCH_NAME }}
+        run: |
+          git commit -am "🔖 Setting SNAPSHOT version ${{ env.NEXT_RELEASE_VERSION }}"
+          git push
       - name: Merge Fast Forward
         run: |
           git checkout main
           git merge --ff-only ${{ env.BRANCH_NAME }}
-          git push
+          git push origin main
 # Log failure:
       - name: JReleaser release output
         if: always()
