--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,10 @@
         <groupId>org.cyclonedx</groupId>
         <artifactId>cyclonedx-maven-plugin</artifactId>
         <version>2.7.9</version>
+        <configuration>
+          <includeTestScope>true</includeTestScope>
+          <outputDirectory>${project.build.directory}/staging-deploy</outputDirectory>
+        </configuration>
         <executions>
           <execution>
             <goals>
